BTCA-01: Firebase integration

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script src="node_modules/angular-route/angular-route.min.js"></script>
 
 <!--FIREBASE-->
-    <!-- <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-    <script src="js/firebasedb.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <script src="js/firebasedb.js"></script>
 
 <!--FACEBOOK-->
     <!-- <script src="js/facebookdb.js"></script> -->
@@ -38,6 +38,10 @@
 
 <!--CONTROLLERS-->
 	<script src="js/controllers/LoginController.js"></script>
+
+<!--SERVICES-->
+    <script src="js/services/AuthService.js"></script>
+    <script src="js/services/DatabaseService.js"></script>
 
 	<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
