--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <!--CONTROLLERS-->
 	<script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/MainController.js"></script>
 
 <!--SERVICES-->
     <script src="js/services/AuthService.js"></script>
